Fix alignment of document title

--- a/resources/resume/css/styles.css
+++ b/resources/resume/css/styles.css
@@ -52,6 +52,7 @@ header {
   color: #fff;
   font-size: 2em;
   font-weight: 100;
+  text-align: center;
 }
 
 .locale span {
@@ -79,7 +80,7 @@ caption {
 
 h1 + section > h2,
 h1 + h2 {
-   padding-top: 0;
+  padding-top: 0;
 }
 
 h1 {
